phone mockup alignment fix

--- a/_sass/pages/_solution.scss
+++ b/_sass/pages/_solution.scss
@@ -579,6 +579,7 @@ main {
     }
     @include rwd(tablet-up) {
       height: 530px;
+      text-align: left;
       img {
         position: absolute;
         margin-bottom: 0;
